# ChangeLog for sys-apps/gradm
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/ChangeLog,v 1.214 2014/03/27 22:21:44 blueness Exp $

  27 Mar 2014; Anthony G. Basile <blueness@gentoo.org>
  -gradm-3.0.201401272054.ebuild, gradm-3.0.201401291757.ebuild:
  Stable amd64 and x86

*gradm-3.0.201401291757 (31 Jan 2014)

  31 Jan 2014; Anthony G. Basile <blueness@gentoo.org>
  +gradm-3.0.201401291757.ebuild:
  Version bump

*gradm-3.0.201401272054 (28 Jan 2014)

  28 Jan 2014; Anthony G. Basile <blueness@gentoo.org>
  +gradm-3.0.201401272054.ebuild, -gradm-3.0.201311242038.ebuild,
  -gradm-3.0.201401231926.ebuild:
  Version bump, remove older unstables

*gradm-3.0.201401231926 (25 Jan 2014)

  25 Jan 2014; Anthony G. Basile <blueness@gentoo.org>
  +gradm-3.0.201401231926.ebuild:
  Version bump

  24 Jan 2014; Anthony G. Basile <blueness@gentoo.org>
  -gradm-2.9.1.201308091629.ebuild, -gradm-3.0.201301231926.ebuild:
  Remove older

*gradm-3.0.201301231926 (24 Jan 2014)

  24 Jan 2014; Anthony G. Basile <blueness@gentoo.org>
  +gradm-3.0.201301231926.ebuild:
  Version bump 3.0

  25 Nov 2013; Anthony G. Basile <blueness@gentoo.org>
  -gradm-2.9.1.201307031629.ebuild:
  Remove oldest stable

*gradm-3.0.201311242038 (25 Nov 2013)

  25 Nov 2013; Anthony G. Basile <blueness@gentoo.org>
  +gradm-3.0.201311242038.ebuild:
  Version bump to grsec 3.0 branch

  25 Nov 2013; Anthony G. Basile <blueness@gentoo.org>
  gradm-2.9.1.201309161709.ebuild:
  Stable amd64 x86

  17 Sep 2013; Anthony G. Basile <blueness@gentoo.org>
  gradm-2.9.1.201308091629.ebuild:
  Stable on amd64 and x86

*gradm-2.9.1.201309161709 (17 Sep 2013)

  17 Sep 2013; Anthony G. Basile <blueness@gentoo.org>
  +gradm-2.9.1.201309161709.ebuild:
  Version bump

  10 Aug 2013; Anthony G. Basile <blueness@gentoo.org>
  -files/respect-gentoo-env-r1.patch, -gradm-2.9.1.201308021745.ebuild:
  Remove older version
