@@ -1,6 +1,12 @@
 # ChangeLog for sys-apps/gradm
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/ChangeLog,v 1.214 2014/03/27 22:21:44 blueness Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/gradm/ChangeLog,v 1.215 2014/05/29 14:22:32 blueness Exp $
+
+*gradm-3.0.201405281853 (29 May 2014)
+
+  29 May 2014; Anthony G. Basile <blueness@gentoo.org>
+  +gradm-3.0.201405281853.ebuild:
+  Version bump
 
   27 Mar 2014; Anthony G. Basile <blueness@gentoo.org>
   -gradm-3.0.201401272054.ebuild, gradm-3.0.201401291757.ebuild:
